@@ -1,5 +1,15 @@
 package no.nav.foreldrepenger.web.app.tjenester.registrering.fp;
 
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.MorsAktivitet.ARBEID;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.MorsAktivitet.ARBEID_OG_UTDANNING;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.MorsAktivitet.INNLAGT;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.MorsAktivitet.UFØRE;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType.FEDREKVOTE;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType.FELLESPERIODE;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType.FORELDREPENGER;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType.MØDREKVOTE;
+import static no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.OverføringÅrsak.INSTITUSJONSOPPHOLD_ANNEN_FORELDER;
 import static no.nav.foreldrepenger.behandlingslager.virksomhet.OrgNummer.KUNSTIG_ORG;
 import static no.nav.foreldrepenger.web.app.tjenester.registrering.SøknadMapperUtil.oppdaterDtoForFødsel;
 import static no.nav.foreldrepenger.web.app.tjenester.registrering.SøknadMapperUtil.opprettAnnenForelderDto;
@@ -13,7 +23,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -25,35 +34,23 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import javax.xml.datatype.DatatypeConfigurationException;
-import javax.xml.datatype.DatatypeFactory;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.mockito.Mockito;
-
-import no.nav.foreldrepenger.behandlingslager.aktør.NavBruker;
 import no.nav.foreldrepenger.behandlingslager.aktør.NavBrukerKjønn;
 import no.nav.foreldrepenger.behandlingslager.aktør.Personinfo;
 import no.nav.foreldrepenger.behandlingslager.behandling.Behandling;
 import no.nav.foreldrepenger.behandlingslager.behandling.MottattDokument;
-import no.nav.foreldrepenger.behandlingslager.behandling.familiehendelse.FamilieHendelseType;
-import no.nav.foreldrepenger.behandlingslager.behandling.repository.BehandlingRepository;
-import no.nav.foreldrepenger.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
 import no.nav.foreldrepenger.behandlingslager.behandling.søknad.ForeldreType;
-import no.nav.foreldrepenger.behandlingslager.behandling.tilrettelegging.SvangerskapspengerRepository;
-import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.MorsAktivitet;
-import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.YtelseFordelingAggregat;
-import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.UttakPeriodeType;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.OppholdÅrsak;
-import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.OverføringÅrsak;
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.årsak.UtsettelseÅrsak;
 import no.nav.foreldrepenger.behandlingslager.fagsak.Fagsak;
 import no.nav.foreldrepenger.behandlingslager.fagsak.FagsakYtelseType;
 import no.nav.foreldrepenger.behandlingslager.virksomhet.Virksomhet;
 import no.nav.foreldrepenger.datavarehus.tjeneste.DatavarehusTjeneste;
-import no.nav.foreldrepenger.dbstoette.UnittestRepositoryRule;
 import no.nav.foreldrepenger.domene.arbeidsforhold.InntektArbeidYtelseTjeneste;
 import no.nav.foreldrepenger.domene.arbeidsgiver.VirksomhetTjeneste;
 import no.nav.foreldrepenger.domene.iay.modell.InntektArbeidYtelseGrunnlag;
@@ -66,130 +63,100 @@ import no.nav.foreldrepenger.domene.ytelsefordeling.YtelseFordelingTjeneste;
 import no.nav.foreldrepenger.mottak.dokumentmottak.impl.OppgittPeriodeMottattDatoTjeneste;
 import no.nav.foreldrepenger.mottak.dokumentpersiterer.impl.søknad.v3.MottattDokumentOversetterSøknad;
 import no.nav.foreldrepenger.mottak.dokumentpersiterer.impl.søknad.v3.MottattDokumentWrapperSøknad;
+import no.nav.foreldrepenger.web.RepositoryAwareTest;
 import no.nav.foreldrepenger.web.app.tjenester.registrering.SøknadMapper;
 import no.nav.foreldrepenger.web.app.tjenester.registrering.dto.AnnenForelderDto;
 import no.nav.foreldrepenger.web.app.tjenester.registrering.dto.DekningsgradDto;
-import no.nav.foreldrepenger.web.app.tjenester.registrering.dto.GraderingDto;
 import no.nav.foreldrepenger.web.app.tjenester.registrering.dto.OppholdDto;
 import no.nav.foreldrepenger.web.app.tjenester.registrering.dto.OverføringsperiodeDto;
-import no.nav.foreldrepenger.web.app.tjenester.registrering.dto.UtsettelseDto;
 import no.nav.vedtak.felles.xml.soeknad.felles.v3.Rettigheter;
-import no.nav.vedtak.felles.xml.soeknad.foreldrepenger.v3.Dekningsgrad;
 import no.nav.vedtak.felles.xml.soeknad.uttak.v3.Fordeling;
 import no.nav.vedtak.felles.xml.soeknad.uttak.v3.Gradering;
-import no.nav.vedtak.felles.xml.soeknad.uttak.v3.Oppholdsperiode;
-import no.nav.vedtak.felles.xml.soeknad.uttak.v3.Overfoeringsperiode;
-import no.nav.vedtak.felles.xml.soeknad.uttak.v3.Utsettelsesperiode;
-import no.nav.vedtak.felles.xml.soeknad.uttak.v3.Uttaksperiode;
-import no.nav.vedtak.felles.xml.soeknad.v3.Soeknad;
 
-public class SøknadMapperTest {
-    private static final DatatypeFactory DATATYPE_FACTORY;
-
-    static {
-        try {
-            DATATYPE_FACTORY = DatatypeFactory.newInstance();
-        } catch (DatatypeConfigurationException e) {
-            throw new ExceptionInInitializerError(e);
-        }
-    }
+@ExtendWith(MockitoExtension.class)
+public class SøknadMapperTest extends RepositoryAwareTest {
 
     private static final AktørId STD_KVINNE_AKTØR_ID = AktørId.dummy();
-    private final VirksomhetTjeneste virksomhetTjeneste = mock(VirksomhetTjeneste.class);
-
-    @Rule
-    public UnittestRepositoryRule repositoryRule = new UnittestRepositoryRule();
-    private BehandlingRepositoryProvider repositoryProvider = new BehandlingRepositoryProvider(repositoryRule.getEntityManager());
-    private InntektArbeidYtelseTjeneste iayTjeneste = Mockito.mock(InntektArbeidYtelseTjeneste.class);
-    private BehandlingRepository behandlingRepository = repositoryProvider.getBehandlingRepository();
+    @Mock
+    private VirksomhetTjeneste virksomhetTjeneste;
+    @Mock
+    private InntektArbeidYtelseTjeneste iayTjeneste;
+    @Mock
     private TpsTjeneste tpsTjeneste;
-    private DatavarehusTjeneste datavarehusTjeneste = mock(DatavarehusTjeneste.class);
-    private SvangerskapspengerRepository svangerskapspengerRepository = new SvangerskapspengerRepository(repositoryRule.getEntityManager());
+    @Mock
+    private DatavarehusTjeneste datavarehusTjeneste;
 
     private SøknadMapper ytelseSøknadMapper;
-    private OppgittPeriodeMottattDatoTjeneste oppgittPeriodeMottattDatoTjeneste =
-        new OppgittPeriodeMottattDatoTjeneste(new YtelseFordelingTjeneste(repositoryProvider.getYtelsesFordelingRepository()));
+    private OppgittPeriodeMottattDatoTjeneste oppgittPeriodeMottattDato;
+    private Optional<Personinfo> kvinne;
 
-    @Before
-    public void setUp() {
-        tpsTjeneste = mock(TpsTjeneste.class);
-        reset(tpsTjeneste);
-        final Optional<AktørId> stdKvinneAktørId = Optional.of(STD_KVINNE_AKTØR_ID);
-        when(tpsTjeneste.hentAktørForFnr(any())).thenReturn(stdKvinneAktørId);
-        final Personinfo.Builder builder = new Personinfo.Builder()
-            .medAktørId(STD_KVINNE_AKTØR_ID)
-            .medNavBrukerKjønn(NavBrukerKjønn.KVINNE)
-            .medNavn("Espen Utvikler")
-            .medPersonIdent(PersonIdent.fra("12345678901"))
-            .medFødselsdato(LocalDate.now().minusYears(20));
-        final Optional<Personinfo> build = Optional.ofNullable(builder.build());
-        when(tpsTjeneste.hentBrukerForAktør(any(AktørId.class))).thenReturn(build);
-        when(iayTjeneste.hentGrunnlag(any(Long.class))).thenReturn(Mockito.mock(InntektArbeidYtelseGrunnlag.class));
-        when(virksomhetTjeneste.finnOrganisasjon(any()))
-            .thenReturn(Optional.of(Virksomhet.getBuilder().medOrgnr(KUNSTIG_ORG).medNavn("Ukjent Firma").medRegistrert(LocalDate.now().minusYears(1)).medRegistrert(LocalDate.now().minusYears(1)).build()));
-        when(virksomhetTjeneste.hentOrganisasjon(any()))
-            .thenReturn(Virksomhet.getBuilder().medOrgnr(KUNSTIG_ORG).medNavn("Ukjent Firma").medRegistrert(LocalDate.now().minusYears(1)).medRegistrert(LocalDate.now().minusYears(1)).build());
+    @BeforeEach
+    public void before() {
+        oppgittPeriodeMottattDato = new OppgittPeriodeMottattDatoTjeneste(new YtelseFordelingTjeneste(ytelsesfordelingRepository));
+
+        kvinne = Optional.of(new Personinfo.Builder()
+                .medAktørId(STD_KVINNE_AKTØR_ID)
+                .medNavBrukerKjønn(NavBrukerKjønn.KVINNE)
+                .medNavn("Espen Utvikler")
+                .medPersonIdent(PersonIdent.fra("12345678901"))
+                .medFødselsdato(LocalDate.now().minusYears(20)).build());
         ytelseSøknadMapper = new YtelseSøknadMapper(tpsTjeneste, virksomhetTjeneste);
     }
 
     @Test
     public void test_mapForeldrepenger() {
-        ManuellRegistreringForeldrepengerDto registreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(registreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now().minusWeeks(3), 1);
-        ytelseSøknadMapper.mapSøknad(registreringForeldrepengerDto, opprettBruker());
+        var dto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(dto, true, LocalDate.now().minusWeeks(3), 1);
+        ytelseSøknadMapper.mapSøknad(dto, opprettBruker());
     }
 
     @Test
     public void test_mapEndringssøknad_utenFordeling() {
-        TidsromPermisjonDto tidsromPermisjonDto = opprettTidsromPermisjonDto(null);
-        ManuellRegistreringEndringsøknadDto manuellRegistreringEndringsøknadDto = new ManuellRegistreringEndringsøknadDto();
-        oppdaterDtoForFødsel(manuellRegistreringEndringsøknadDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
-
-        manuellRegistreringEndringsøknadDto.setTidsromPermisjon(tidsromPermisjonDto);
-        Fordeling fordeling = YtelseSøknadMapper.mapFordelingEndringssøknad(manuellRegistreringEndringsøknadDto);
+        var dto = new ManuellRegistreringEndringsøknadDto();
+        oppdaterDtoForFødsel(dto, true, LocalDate.now(), 1);
+        dto.setTidsromPermisjon(opprettTidsromPermisjonDto(null));
+        var fordeling = YtelseSøknadMapper.mapFordelingEndringssøknad(dto);
         assertThat(fordeling).isNotNull();
         assertThat(fordeling.getPerioder()).isEmpty();
     }
 
     @Test
     public void test_mapEndringssøknad_medFordeling() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        BigDecimal prosentAndel = BigDecimal.valueOf(15);
-        UttakPeriodeType uttakPeriodeType = UttakPeriodeType.FEDREKVOTE;
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var prosentAndel = BigDecimal.valueOf(15);
+        var permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now(), LocalDate.now().plusWeeks(3),
+                MØDREKVOTE, null);
+        var tidsromPermisjonDto = opprettTidsromPermisjonDto(List.of(permisjonPeriodeDto));
+        var dto = new ManuellRegistreringEndringsøknadDto();
+        oppdaterDtoForFødsel(dto, true, LocalDate.now(), 1);
 
-        PermisjonPeriodeDto permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now(), LocalDate.now().plusWeeks(3), UttakPeriodeType.MØDREKVOTE, null);
-        TidsromPermisjonDto tidsromPermisjonDto = opprettTidsromPermisjonDto(Collections.singletonList(permisjonPeriodeDto));
-        ManuellRegistreringEndringsøknadDto manuellRegistreringEndringsøknadDto = new ManuellRegistreringEndringsøknadDto();
-        oppdaterDtoForFødsel(manuellRegistreringEndringsøknadDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
-
-        //Oppretter utsettelseperiode, mapOverfoeringsperiode, mapGraderingsperioder
-        GraderingDto graderingDto = opprettGraderingDto(fraDato, tomDato, prosentAndel, uttakPeriodeType, false, true, false, null);
+        // Oppretter utsettelseperiode, mapOverfoeringsperiode, mapGraderingsperioder
+        var graderingDto = opprettGraderingDto(fraDato, tomDato, prosentAndel, FEDREKVOTE, false, true, false, null);
         tidsromPermisjonDto.setGraderingPeriode(Collections.singletonList(graderingDto));
 
-        UtsettelseDto utsettelserDto = opprettUtsettelseDto(fraDato, tomDato, uttakPeriodeType, false);
+        var utsettelserDto = opprettUtsettelseDto(fraDato, tomDato, FEDREKVOTE, false);
         tidsromPermisjonDto.setUtsettelsePeriode(Collections.singletonList(utsettelserDto));
 
-        OverføringÅrsak årsak = OverføringÅrsak.INSTITUSJONSOPPHOLD_ANNEN_FORELDER;
-        OverføringsperiodeDto overføringsperiodeDto = new OverføringsperiodeDto();
-        overføringsperiodeDto.setOverforingArsak(årsak);
+        var overføringsperiodeDto = new OverføringsperiodeDto();
+        overføringsperiodeDto.setOverforingArsak(INSTITUSJONSOPPHOLD_ANNEN_FORELDER);
         overføringsperiodeDto.setPeriodeFom(fraDato);
         overføringsperiodeDto.setPeriodeTom(tomDato);
         tidsromPermisjonDto.setOverforingsperioder(List.of(overføringsperiodeDto));
 
-        manuellRegistreringEndringsøknadDto.setTidsromPermisjon(tidsromPermisjonDto);
-        Fordeling fordeling = YtelseSøknadMapper.mapFordelingEndringssøknad(manuellRegistreringEndringsøknadDto);
+        dto.setTidsromPermisjon(tidsromPermisjonDto);
+        Fordeling fordeling = YtelseSøknadMapper.mapFordelingEndringssøknad(dto);
         assertThat(fordeling).isNotNull();
-        assertThat(fordeling.getPerioder()).hasSize(4); //Forventer å ha en periode for hver av: permisjonPeriode, utsettelseperiode, Overfoeringsperiode og Graderingsperiode.
+        assertThat(fordeling.getPerioder()).hasSize(4); // Forventer å ha en periode for hver av: permisjonPeriode, utsettelseperiode,
+                                                        // Overfoeringsperiode og Graderingsperiode.
     }
-
 
     @Test
     public void testMedDekningsgrad() {
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        manuellRegistreringForeldrepengerDto.setDekningsgrad(DekningsgradDto.HUNDRE);
+        var dto = new ManuellRegistreringForeldrepengerDto();
+        dto.setDekningsgrad(DekningsgradDto.HUNDRE);
 
-        Dekningsgrad dekningsgrad = YtelseSøknadMapper.mapDekningsgrad(manuellRegistreringForeldrepengerDto);
+        var dekningsgrad = YtelseSøknadMapper.mapDekningsgrad(dto);
         assertThat(dekningsgrad).isNotNull();
         assertThat(dekningsgrad.getDekningsgrad()).isNotNull();
         assertThat(dekningsgrad.getDekningsgrad().getKode()).isEqualTo(DekningsgradDto.HUNDRE.getValue());
@@ -197,88 +164,81 @@ public class SøknadMapperTest {
 
     @Test
     public void testUtenDekningsgrad() {
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-
-        Dekningsgrad dekningsgrad = YtelseSøknadMapper.mapDekningsgrad(manuellRegistreringForeldrepengerDto);
-        assertThat(dekningsgrad).isNull();
+        assertThat(YtelseSøknadMapper.mapDekningsgrad(new ManuellRegistreringForeldrepengerDto())).isNull();
     }
 
     @Test
     public void test_mapOverfoeringsperiode() {
-        OverføringÅrsak årsak = OverføringÅrsak.INSTITUSJONSOPPHOLD_ANNEN_FORELDER;
-        OverføringsperiodeDto overføringsperiode = new OverføringsperiodeDto();
-        overføringsperiode.setOverforingArsak(årsak);
+        var overføringsperiode = new OverføringsperiodeDto();
+        overføringsperiode.setOverforingArsak(INSTITUSJONSOPPHOLD_ANNEN_FORELDER);
 
-        Overfoeringsperiode overfoeringsperiode = YtelseSøknadMapper.mapOverføringsperiode(overføringsperiode, ForeldreType.FAR);
+        var overfoeringsperiode = YtelseSøknadMapper.mapOverføringsperiode(overføringsperiode, ForeldreType.FAR);
         assertThat(overfoeringsperiode).isNotNull();
-        assertThat(overfoeringsperiode.getAarsak().getKode()).isEqualTo(årsak.getKode());
+        assertThat(overfoeringsperiode.getAarsak().getKode()).isEqualTo(INSTITUSJONSOPPHOLD_ANNEN_FORELDER.getKode());
     }
 
     @Test
     public void test_mapUtsettelsesperiode() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        UttakPeriodeType uttakPeriodeType = UttakPeriodeType.FELLESPERIODE;
-        UtsettelseDto utsettelserDto = opprettUtsettelseDto(fraDato, tomDato, uttakPeriodeType, true);
-        Utsettelsesperiode utsettelsesperiode = YtelseSøknadMapper.mapUtsettelsesperiode(utsettelserDto);
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var utsettelserDto = opprettUtsettelseDto(fraDato, tomDato, FELLESPERIODE, true);
+        var utsettelsesperiode = YtelseSøknadMapper.mapUtsettelsesperiode(utsettelserDto);
         assertThat(utsettelsesperiode).isNotNull();
         assertThat(utsettelsesperiode.getAarsak().getKode()).isEqualTo(UtsettelseÅrsak.FERIE.getKode());
         assertThat(utsettelsesperiode.getFom()).isEqualTo(fraDato);
         assertThat(utsettelsesperiode.getTom()).isEqualTo(tomDato);
-        assertThat(utsettelsesperiode.getUtsettelseAv().getKode()).isEqualTo(uttakPeriodeType.getKode());
+        assertThat(utsettelsesperiode.getUtsettelseAv().getKode()).isEqualTo(FELLESPERIODE.getKode());
         assertThat(utsettelsesperiode.isErArbeidstaker()).isEqualTo(true);
     }
 
-
     @Test
     public void test_mapFedrekvotePeriodeDto() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        PermisjonPeriodeDto fedrekvotePeriodeDto = opprettPermisjonPeriodeDto(fraDato, tomDato, UttakPeriodeType.FEDREKVOTE, null);
-        Uttaksperiode uttaksperiode = YtelseSøknadMapper.mapPermisjonPeriodeDto(fedrekvotePeriodeDto);
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var fedrekvotePeriodeDto = opprettPermisjonPeriodeDto(fraDato, tomDato, FEDREKVOTE, null);
+        var uttaksperiode = YtelseSøknadMapper.mapPermisjonPeriodeDto(fedrekvotePeriodeDto);
         assertThat(uttaksperiode).isNotNull();
         assertThat(uttaksperiode.getFom()).isEqualTo(fraDato);
         assertThat(uttaksperiode.getTom()).isEqualTo(tomDato);
-        assertThat(uttaksperiode.getType().getKode()).isEqualTo(UttakPeriodeType.FEDREKVOTE.getKode());
+        assertThat(uttaksperiode.getType().getKode()).isEqualTo(FEDREKVOTE.getKode());
     }
 
     @Test
     public void test_mapMødrekvotePeriodeDto() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        PermisjonPeriodeDto fedrekvotePeriodeDto = opprettPermisjonPeriodeDto(fraDato, tomDato, UttakPeriodeType.MØDREKVOTE, null);
-        Uttaksperiode uttaksperiode = YtelseSøknadMapper.mapPermisjonPeriodeDto(fedrekvotePeriodeDto);
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var uttaksperiode = YtelseSøknadMapper
+                .mapPermisjonPeriodeDto(opprettPermisjonPeriodeDto(fraDato, tomDato, MØDREKVOTE, null));
         assertThat(uttaksperiode).isNotNull();
         assertThat(uttaksperiode.getFom()).isEqualTo(fraDato);
         assertThat(uttaksperiode.getTom()).isEqualTo(tomDato);
-        assertThat(uttaksperiode.getType().getKode()).isEqualTo(UttakPeriodeType.MØDREKVOTE.getKode());
+        assertThat(uttaksperiode.getType().getKode()).isEqualTo(MØDREKVOTE.getKode());
     }
 
     @Test
     public void test_mapForeldrepengerFørFødselPeriode() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        PermisjonPeriodeDto fedrekvotePeriodeDto = opprettPermisjonPeriodeDto(fraDato, tomDato, UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL, null);
-        Uttaksperiode uttaksperiode = YtelseSøknadMapper.mapPermisjonPeriodeDto(fedrekvotePeriodeDto);
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var uttaksperiode = YtelseSøknadMapper
+                .mapPermisjonPeriodeDto(opprettPermisjonPeriodeDto(fraDato, tomDato, FORELDREPENGER_FØR_FØDSEL, null));
         assertThat(uttaksperiode).isNotNull();
         assertThat(uttaksperiode.getFom()).isEqualTo(fraDato);
         assertThat(uttaksperiode.getTom()).isEqualTo(tomDato);
-        assertThat(uttaksperiode.getType().getKode()).isEqualTo(UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL.getKode());
+        assertThat(uttaksperiode.getType().getKode()).isEqualTo(FORELDREPENGER_FØR_FØDSEL.getKode());
     }
 
     @Test
     public void test_mapGraderingsperiode() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        BigDecimal prosentAndel = BigDecimal.valueOf(15);
-        UttakPeriodeType uttakPeriodeType = UttakPeriodeType.FEDREKVOTE;
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var prosentAndel = BigDecimal.valueOf(15);
         String orgNr = KUNSTIG_ORG + "1";
-        GraderingDto graderingDto = opprettGraderingDto(fraDato, tomDato, prosentAndel, uttakPeriodeType, true, false, false, orgNr);
-        Gradering gradering = ((Gradering) YtelseSøknadMapper.mapGraderingsperiode(graderingDto));
+        var gradering = ((Gradering) YtelseSøknadMapper
+                .mapGraderingsperiode(opprettGraderingDto(fraDato, tomDato, prosentAndel, FEDREKVOTE, true, false, false, orgNr)));
         assertThat(gradering).isNotNull();
         assertThat(gradering.getFom()).isEqualTo(fraDato);
         assertThat(gradering.getTom()).isEqualTo(tomDato);
-        assertThat(gradering.getType().getKode()).isEqualTo(uttakPeriodeType.getKode());
+        assertThat(gradering.getType().getKode()).isEqualTo(FEDREKVOTE.getKode());
         assertThat(gradering.getArbeidtidProsent()).isEqualTo(prosentAndel.doubleValue());
         assertThat(gradering.isErArbeidstaker()).isEqualTo(true);
         assertThat(gradering.getArbeidsgiver().getIdentifikator()).isEqualTo(orgNr);
@@ -286,17 +246,16 @@ public class SøknadMapperTest {
 
     @Test
     public void test_mapGraderingsperiode_arbeidsprosent_desimal() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        BigDecimal prosentAndel = BigDecimal.valueOf(15.55);
-        UttakPeriodeType uttakPeriodeType = UttakPeriodeType.FEDREKVOTE;
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var prosentAndel = BigDecimal.valueOf(15.55);
         String orgNr = KUNSTIG_ORG + "1";
-        GraderingDto graderingDto = opprettGraderingDto(fraDato, tomDato, prosentAndel, uttakPeriodeType, true, false, false, orgNr);
-        Gradering gradering = ((Gradering) YtelseSøknadMapper.mapGraderingsperiode(graderingDto));
+        Gradering gradering = ((Gradering) YtelseSøknadMapper
+                .mapGraderingsperiode(opprettGraderingDto(fraDato, tomDato, prosentAndel, FEDREKVOTE, true, false, false, orgNr)));
         assertThat(gradering).isNotNull();
         assertThat(gradering.getFom()).isEqualTo(fraDato);
         assertThat(gradering.getTom()).isEqualTo(tomDato);
-        assertThat(gradering.getType().getKode()).isEqualTo(uttakPeriodeType.getKode());
+        assertThat(gradering.getType().getKode()).isEqualTo(FEDREKVOTE.getKode());
         assertThat(gradering.getArbeidtidProsent()).isEqualTo(prosentAndel.doubleValue());
         assertThat(gradering.isErArbeidstaker()).isEqualTo(true);
         assertThat(gradering.getArbeidsgiver().getIdentifikator()).isEqualTo(orgNr);
@@ -304,39 +263,38 @@ public class SøknadMapperTest {
 
     @Test
     public void test_mapFellesPeriodeDto() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
 
-        PermisjonPeriodeDto fellesPeriodeDto = opprettPermisjonPeriodeDto(fraDato, tomDato, UttakPeriodeType.FELLESPERIODE, MorsAktivitet.ARBEID);
-        Uttaksperiode uttaksperiode = YtelseSøknadMapper.mapPermisjonPeriodeDto(fellesPeriodeDto);
+        var uttaksperiode = YtelseSøknadMapper
+                .mapPermisjonPeriodeDto(opprettPermisjonPeriodeDto(fraDato, tomDato, FELLESPERIODE, ARBEID));
         assertThat(uttaksperiode).isNotNull();
         assertThat(uttaksperiode.getFom()).isEqualTo(fraDato);
         assertThat(uttaksperiode.getTom()).isEqualTo(tomDato);
-        assertThat(uttaksperiode.getType().getKode()).isEqualTo(UttakPeriodeType.FELLESPERIODE.getKode());
-        assertThat(uttaksperiode.getMorsAktivitetIPerioden().getKode()).isEqualTo(MorsAktivitet.ARBEID.getKode());
+        assertThat(uttaksperiode.getType().getKode()).isEqualTo(FELLESPERIODE.getKode());
+        assertThat(uttaksperiode.getMorsAktivitetIPerioden().getKode()).isEqualTo(ARBEID.getKode());
     }
 
     @Test
     public void test_mapUttaksperioder_gradering() {
-        LocalDate fraDato = LocalDate.now();
-        LocalDate tomDato = LocalDate.now().plusDays(3);
-        BigDecimal prosentAndel = BigDecimal.valueOf(15);
-        UttakPeriodeType uttakPeriodeType = UttakPeriodeType.FEDREKVOTE;
-        GraderingDto graderingDto = opprettGraderingDto(fraDato, tomDato, prosentAndel, uttakPeriodeType, true, false, false, null);
-
-        List<Uttaksperiode> uttaksperiodes = YtelseSøknadMapper.mapGraderingsperioder(Collections.singletonList(graderingDto));
+        var fraDato = LocalDate.now();
+        var tomDato = LocalDate.now().plusDays(3);
+        var prosentAndel = BigDecimal.valueOf(15);
+        var uttakPeriodeType = FEDREKVOTE;
+        var uttaksperiodes = YtelseSøknadMapper
+                .mapGraderingsperioder(List.of(opprettGraderingDto(fraDato, tomDato, prosentAndel, uttakPeriodeType, true, false, false, null)));
         assertThat(uttaksperiodes).isNotNull();
         assertThat(uttaksperiodes).hasSize(1);
     }
 
     @Test
     public void test_mapUttaksperioder_gradering_med_samtidig_uttak() {
-        GraderingDto graderingDto = opprettGraderingDto(LocalDate.now(), LocalDate.now().plusDays(3), BigDecimal.valueOf(15),
-            UttakPeriodeType.FEDREKVOTE, true, false, false, null);
+        var graderingDto = opprettGraderingDto(LocalDate.now(), LocalDate.now().plusDays(3), BigDecimal.valueOf(15),
+                FEDREKVOTE, true, false, false, null);
         graderingDto.setHarSamtidigUttak(true);
         graderingDto.setSamtidigUttaksprosent(BigDecimal.TEN);
 
-        List<Uttaksperiode> uttakperioder = YtelseSøknadMapper.mapGraderingsperioder(Collections.singletonList(graderingDto));
+        var uttakperioder = YtelseSøknadMapper.mapGraderingsperioder(List.of(graderingDto));
         assertThat(uttakperioder).hasSize(1);
         assertThat(uttakperioder.get(0).isOenskerSamtidigUttak()).isEqualTo(graderingDto.getHarSamtidigUttak());
         assertThat(uttakperioder.get(0).getSamtidigUttakProsent()).isEqualTo(graderingDto.getSamtidigUttaksprosent().doubleValue());
@@ -344,12 +302,12 @@ public class SøknadMapperTest {
 
     @Test
     public void test_mapUttaksperioder_samtidig_uttak() {
-        PermisjonPeriodeDto periode = opprettPermisjonPeriodeDto(LocalDate.of(2018, 1, 1), LocalDate.of(2018, 1, 1),
-            UttakPeriodeType.FELLESPERIODE, MorsAktivitet.ARBEID_OG_UTDANNING);
+        var periode = opprettPermisjonPeriodeDto(LocalDate.of(2018, 1, 1), LocalDate.of(2018, 1, 1),
+                FELLESPERIODE, ARBEID_OG_UTDANNING);
         periode.setHarSamtidigUttak(true);
         periode.setSamtidigUttaksprosent(BigDecimal.TEN);
 
-        List<Uttaksperiode> uttaksperioder = YtelseSøknadMapper.mapUttaksperioder(Collections.singletonList(periode));
+        var uttaksperioder = YtelseSøknadMapper.mapUttaksperioder(List.of(periode));
         assertThat(uttaksperioder).hasSize(1);
         assertThat(uttaksperioder.get(0).isOenskerSamtidigUttak()).isEqualTo(periode.getHarSamtidigUttak());
         assertThat(uttaksperioder.get(0).getSamtidigUttakProsent()).isEqualTo(periode.getSamtidigUttaksprosent().doubleValue());
@@ -357,12 +315,12 @@ public class SøknadMapperTest {
 
     @Test
     public void test_mapUttaksperioder_opphold() {
-        OppholdDto oppholdDto = new OppholdDto();
+        var oppholdDto = new OppholdDto();
         oppholdDto.setPeriodeFom(LocalDate.now().minusDays(1));
         oppholdDto.setPeriodeTom(LocalDate.now());
         oppholdDto.setÅrsak(OppholdÅrsak.MØDREKVOTE_ANNEN_FORELDER);
 
-        List<Oppholdsperiode> oppholdsperiode = YtelseSøknadMapper.mapOppholdsperioder(Collections.singletonList(oppholdDto));
+        var oppholdsperiode = YtelseSøknadMapper.mapOppholdsperioder(List.of(oppholdDto));
         assertThat(oppholdsperiode).hasSize(1);
         assertThat(oppholdsperiode.get(0).getAarsak().getKode()).isEqualTo(oppholdDto.getÅrsak().getKode());
         assertThat(oppholdsperiode.get(0).getAarsak().getKodeverk()).isEqualTo(oppholdDto.getÅrsak().getKodeverk());
@@ -372,102 +330,111 @@ public class SøknadMapperTest {
 
     @Test
     public void test_mapUttaksperioder_permisjonperioder() {
-        //Test av permisjonsperiodene:
-        //dato før fødsel -> fødselsdato -> mødrekvote
-        LocalDate perminsjonstartFørFødsel = LocalDate.now().minusWeeks(3);
-        LocalDate fødselsdato = LocalDate.now();
-        LocalDate mødrekvoteSlutt = fødselsdato.plusDays(1).plusWeeks(3);
+        // Test av permisjonsperiodene:
+        // dato før fødsel -> fødselsdato -> mødrekvote
+        var perminsjonstartFørFødsel = LocalDate.now().minusWeeks(3);
+        var fødselsdato = LocalDate.now();
+        var mødrekvoteSlutt = fødselsdato.plusDays(1).plusWeeks(3);
 
-        PermisjonPeriodeDto permisjonPeriodeFørFødselDto = opprettPermisjonPeriodeDto(perminsjonstartFørFødsel, fødselsdato, UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL, null);
-        PermisjonPeriodeDto permisjonPeriodeMødrekvote = opprettPermisjonPeriodeDto(LocalDate.now().plusDays(1), mødrekvoteSlutt, UttakPeriodeType.MØDREKVOTE, null);
+        var permisjonPeriodeFørFødselDto = opprettPermisjonPeriodeDto(perminsjonstartFørFødsel, fødselsdato,
+                FORELDREPENGER_FØR_FØDSEL, null);
+        var permisjonPeriodeMødrekvote = opprettPermisjonPeriodeDto(LocalDate.now().plusDays(1), mødrekvoteSlutt,
+                MØDREKVOTE, null);
 
-        List<PermisjonPeriodeDto> permisjonsperioder = new ArrayList<>();
-        permisjonsperioder.add(permisjonPeriodeFørFødselDto);
-        permisjonsperioder.add(permisjonPeriodeMødrekvote);
-
-        List<Uttaksperiode> uttaksperioder = YtelseSøknadMapper.mapUttaksperioder(permisjonsperioder);
+        var uttaksperioder = YtelseSøknadMapper.mapUttaksperioder(List.of(permisjonPeriodeFørFødselDto, permisjonPeriodeMødrekvote));
         assertThat(uttaksperioder).isNotNull();
         assertThat(uttaksperioder).hasSize(2);
-        assertThat(uttaksperioder).anySatisfy(uttaksperiode -> UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL.getKode().equals(uttaksperiode.getType().getKode()));
-        assertThat(uttaksperioder).anySatisfy(uttaksperiode -> UttakPeriodeType.MØDREKVOTE.getKode().equals(uttaksperiode.getType().getKode()));
+        assertThat(uttaksperioder)
+                .anySatisfy(uttaksperiode -> FORELDREPENGER_FØR_FØDSEL.getKode().equals(uttaksperiode.getType().getKode()));
+        assertThat(uttaksperioder).anySatisfy(uttaksperiode -> MØDREKVOTE.getKode().equals(uttaksperiode.getType().getKode()));
     }
 
     @Test
     public void test_mapUttaksperioder_Fellesperioder() {
-        LocalDate mødrekvoteSlutt = LocalDate.now().plusWeeks(3);
-        LocalDate fellesperiodeSlutt = mødrekvoteSlutt.plusWeeks(4);
+        var mødrekvoteSlutt = LocalDate.now().plusWeeks(3);
+        var fellesperiodeSlutt = mødrekvoteSlutt.plusWeeks(4);
 
-        PermisjonPeriodeDto fellesPeriodeDto = opprettPermisjonPeriodeDto(mødrekvoteSlutt, fellesperiodeSlutt, UttakPeriodeType.FELLESPERIODE, MorsAktivitet.ARBEID_OG_UTDANNING);
+        var fellesPeriodeDto = opprettPermisjonPeriodeDto(mødrekvoteSlutt, fellesperiodeSlutt, FELLESPERIODE,
+                ARBEID_OG_UTDANNING);
 
-        List<Uttaksperiode> uttaksperioder = YtelseSøknadMapper.mapUttaksperioder(Collections.singletonList(fellesPeriodeDto));
+        var uttaksperioder = YtelseSøknadMapper.mapUttaksperioder(List.of(fellesPeriodeDto));
         assertThat(uttaksperioder).isNotNull();
         assertThat(uttaksperioder).hasSize(1);
-        assertThat(uttaksperioder).first().satisfies(uttaksperiode -> MorsAktivitet.ARBEID_OG_UTDANNING.getKode().equals(uttaksperiode.getMorsAktivitetIPerioden().getKode()));
-        assertThat(uttaksperioder).first().satisfies(uttaksperiode -> UttakPeriodeType.FELLESPERIODE.getKode().equals(uttaksperiode.getType().getKode()));
+        assertThat(uttaksperioder).first()
+                .satisfies(uttaksperiode -> ARBEID_OG_UTDANNING.getKode().equals(uttaksperiode.getMorsAktivitetIPerioden().getKode()));
+        assertThat(uttaksperioder).first()
+                .satisfies(uttaksperiode -> FELLESPERIODE.getKode().equals(uttaksperiode.getType().getKode()));
     }
 
     @Test
     public void test_map_mors_aktivitet_uføretrygd() {
-        LocalDate mødrekvoteSlutt = LocalDate.now().plusWeeks(3);
-        LocalDate fellesperiodeSlutt = mødrekvoteSlutt.plusWeeks(4);
+        var mødrekvoteSlutt = LocalDate.now().plusWeeks(3);
+        var fellesperiodeSlutt = mødrekvoteSlutt.plusWeeks(4);
 
-        PermisjonPeriodeDto fellesPeriodeDto = opprettPermisjonPeriodeDto(mødrekvoteSlutt, fellesperiodeSlutt, UttakPeriodeType.FELLESPERIODE, MorsAktivitet.UFØRE);
-
-        List<Uttaksperiode> uttaksperioder = YtelseSøknadMapper.mapUttaksperioder(Collections.singletonList(fellesPeriodeDto));
+        var uttaksperioder = YtelseSøknadMapper
+                .mapUttaksperioder(List.of(opprettPermisjonPeriodeDto(mødrekvoteSlutt, fellesperiodeSlutt, FELLESPERIODE,
+                        UFØRE)));
         assertThat(uttaksperioder).isNotNull();
         assertThat(uttaksperioder).hasSize(1);
-        assertThat(uttaksperioder).first().satisfies(uttaksperiode -> MorsAktivitet.UFØRE.getKode().equals(uttaksperiode.getMorsAktivitetIPerioden().getKode()));
-        assertThat(uttaksperioder).first().satisfies(uttaksperiode -> UttakPeriodeType.FELLESPERIODE.getKode().equals(uttaksperiode.getType().getKode()));
+        assertThat(uttaksperioder).first()
+                .satisfies(uttaksperiode -> UFØRE.getKode().equals(uttaksperiode.getMorsAktivitetIPerioden().getKode()));
+        assertThat(uttaksperioder).first()
+                .satisfies(uttaksperiode -> FELLESPERIODE.getKode().equals(uttaksperiode.getType().getKode()));
     }
 
     @Test
     public void test_mapFordeling_morSøkerMenfarRettPåFedrekvote() {
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        PermisjonPeriodeDto permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL, null);
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
+        var manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
+        var permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(),
+                FORELDREPENGER_FØR_FØDSEL, null);
+        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, true, LocalDate.now(), 1);
         manuellRegistreringForeldrepengerDto.setTidsromPermisjon(opprettTidsromPermisjonDto(Collections.singletonList(permisjonPeriodeDto)));
         Fordeling fordeling = YtelseSøknadMapper.mapFordeling(manuellRegistreringForeldrepengerDto);
         assertThat(fordeling).isNotNull();
-        assertThat(fordeling.getPerioder()).hasSize(1); //Forventer å ha mødrekvote periode basert på forventet permisjon før fødsel
+        assertThat(fordeling.getPerioder()).hasSize(1); // Forventer å ha mødrekvote periode basert på forventet permisjon før fødsel
     }
 
     @Test
     public void test_skal_ta_inn_papirsøknadDTO_mappe_til_xml_så_mappe_til_domenemodell() {
-        NavBruker navBruker = opprettBruker();
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
-        List<PermisjonPeriodeDto> permisjonPerioder = new ArrayList<>();
-        PermisjonPeriodeDto permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), UttakPeriodeType.MØDREKVOTE, null);
-        PermisjonPeriodeDto permisjonPeriodeDto2 = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), UttakPeriodeType.FELLESPERIODE, MorsAktivitet.ARBEID);
-        PermisjonPeriodeDto permisjonPeriodeDto3 = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), UttakPeriodeType.FORELDREPENGER, MorsAktivitet.INNLAGT);
-        permisjonPerioder.add(permisjonPeriodeDto);
-        permisjonPerioder.add(permisjonPeriodeDto2);
-        permisjonPerioder.add(permisjonPeriodeDto3);
-        manuellRegistreringForeldrepengerDto.setTidsromPermisjon(opprettTidsromPermisjonDto(permisjonPerioder));
-        manuellRegistreringForeldrepengerDto.setDekningsgrad(DekningsgradDto.HUNDRE);
+        var navBruker = opprettBruker();
+        var dto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(dto, true, LocalDate.now(), 1);
+        var permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(),
+                MØDREKVOTE, null);
+        var permisjonPeriodeDto2 = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(),
+                FELLESPERIODE, ARBEID);
+        var permisjonPeriodeDto3 = opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(),
+                FORELDREPENGER, INNLAGT);
+        var permisjonPerioder = List.of(permisjonPeriodeDto, permisjonPeriodeDto2, permisjonPeriodeDto3);
+
+        dto.setTidsromPermisjon(opprettTidsromPermisjonDto(permisjonPerioder));
+        dto.setDekningsgrad(DekningsgradDto.HUNDRE);
 
         // Annen forelder er informert
-        manuellRegistreringForeldrepengerDto.setAnnenForelderInformert(true);
+        dto.setAnnenForelderInformert(true);
 
         AnnenForelderDto annenForelderDto = new AnnenForelderDto();
         annenForelderDto.setDenAndreForelderenHarRettPaForeldrepenger(true);
-        manuellRegistreringForeldrepengerDto.setAnnenForelder(annenForelderDto);
-
-        final Soeknad soeknad = ytelseSøknadMapper.mapSøknad(manuellRegistreringForeldrepengerDto, navBruker);
-        final MottattDokumentOversetterSøknad oversetter = new MottattDokumentOversetterSøknad(repositoryProvider,
-            virksomhetTjeneste, iayTjeneste, tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository,
-            oppgittPeriodeMottattDatoTjeneste);
-        final Fagsak fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
-        final Behandling.Builder builder = Behandling.forFørstegangssøknad(fagsak);
-        final Behandling behandling = builder.build();
+        dto.setAnnenForelder(annenForelderDto);
+        when(tpsTjeneste.hentBrukerForAktør(any(AktørId.class))).thenReturn(kvinne);
+        when(tpsTjeneste.hentAktørForFnr(any())).thenReturn(Optional.of(STD_KVINNE_AKTØR_ID));
+        var soeknad = ytelseSøknadMapper.mapSøknad(dto, navBruker);
+        var oversetter = new MottattDokumentOversetterSøknad(repositoryProvider,
+                virksomhetTjeneste, iayTjeneste, tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository,
+                oppgittPeriodeMottattDato);
+        var fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
+        var behandling = Behandling.forFørstegangssøknad(fagsak).build();
 
         repositoryProvider.getFagsakRepository().opprettNy(fagsak);
         behandlingRepository.lagre(behandling, behandlingRepository.taSkriveLås(behandling));
 
-        final MottattDokument.Builder builder1 = new MottattDokument.Builder().medMottattDato(LocalDate.now()).medFagsakId(behandling.getFagsakId()).medElektroniskRegistrert(true);
-        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad), builder1.build(), behandling, Optional.empty());
+        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad),
+                new MottattDokument.Builder().medMottattDato(LocalDate.now())
+                        .medFagsakId(behandling.getFagsakId())
+                        .medElektroniskRegistrert(true).build(),
+                behandling, Optional.empty());
 
-        final YtelseFordelingAggregat ytelseFordelingAggregat = repositoryProvider.getYtelsesFordelingRepository().hentAggregat(behandling.getId());
+        var ytelseFordelingAggregat = repositoryProvider.getYtelsesFordelingRepository().hentAggregat(behandling.getId());
 
         assertThat(ytelseFordelingAggregat.getOppgittRettighet()).isNotNull();
         assertThat(ytelseFordelingAggregat.getOppgittRettighet().getHarAnnenForeldreRett()).isTrue();
@@ -478,89 +445,95 @@ public class SøknadMapperTest {
 
     @Test
     public void test_verdikjeden_fra_papirsøknad_til_domenemodell_mor_søker_med_mødrekvote_periode_før_fødsel_utsettelse() {
-        NavBruker navBruker = opprettBruker();
-        final LocalDate fødselsdato = LocalDate.now().minusDays(10);
-        final LocalDate mødrekvoteSlutt = fødselsdato.plusWeeks(10);
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, fødselsdato, 1);
-        //Perioder: permisjon før fødsel og mødrekvote
+        var navBruker = opprettBruker();
+        var fødselsdato = LocalDate.now().minusDays(10);
+        var mødrekvoteSlutt = fødselsdato.plusWeeks(10);
+        var manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, true, fødselsdato, 1);
+        // Perioder: permisjon før fødsel og mødrekvote
         List<PermisjonPeriodeDto> permisjonsperioder = new ArrayList<>();
-        permisjonsperioder.add(opprettPermisjonPeriodeDto(fødselsdato.minusWeeks(3), fødselsdato, UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL, null));
-        permisjonsperioder.add(opprettPermisjonPeriodeDto(fødselsdato, mødrekvoteSlutt, UttakPeriodeType.MØDREKVOTE, null));
-        TidsromPermisjonDto tidsromPermisjonDto = opprettTidsromPermisjonDto(permisjonsperioder);
+        permisjonsperioder.add(opprettPermisjonPeriodeDto(fødselsdato.minusWeeks(3), fødselsdato, FORELDREPENGER_FØR_FØDSEL, null));
+        permisjonsperioder.add(opprettPermisjonPeriodeDto(fødselsdato, mødrekvoteSlutt, MØDREKVOTE, null));
+        var tidsromPermisjonDto = opprettTidsromPermisjonDto(permisjonsperioder);
 
-        //Utsettelse
-        UtsettelseDto utsettelserDto = opprettUtsettelseDto(mødrekvoteSlutt, mødrekvoteSlutt.plusWeeks(1), UttakPeriodeType.MØDREKVOTE, true);
+        var utsettelserDto = opprettUtsettelseDto(mødrekvoteSlutt, mødrekvoteSlutt.plusWeeks(1), MØDREKVOTE, true);
         tidsromPermisjonDto.setUtsettelsePeriode(Collections.singletonList(utsettelserDto));
 
         manuellRegistreringForeldrepengerDto.setTidsromPermisjon(tidsromPermisjonDto);
 
-        //Dekningsgrad
         manuellRegistreringForeldrepengerDto.setDekningsgrad(DekningsgradDto.AATI);
 
-        // Annen forelder er informert
         manuellRegistreringForeldrepengerDto.setAnnenForelderInformert(true);
 
-        AnnenForelderDto annenForelderDto = new AnnenForelderDto();
+        var annenForelderDto = new AnnenForelderDto();
         annenForelderDto.setDenAndreForelderenHarRettPaForeldrepenger(false);
         annenForelderDto.setSokerHarAleneomsorg(true);
         manuellRegistreringForeldrepengerDto.setAnnenForelder(annenForelderDto);
+        when(tpsTjeneste.hentAktørForFnr(any())).thenReturn(Optional.of(STD_KVINNE_AKTØR_ID));
 
-        final Soeknad soeknad = ytelseSøknadMapper.mapSøknad(manuellRegistreringForeldrepengerDto, navBruker);
-        final MottattDokumentOversetterSøknad oversetter = new MottattDokumentOversetterSøknad(repositoryProvider, virksomhetTjeneste, iayTjeneste, tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository, oppgittPeriodeMottattDatoTjeneste);
-        final Fagsak fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
-        final Behandling.Builder builder = Behandling.forFørstegangssøknad(fagsak);
-        final Behandling behandling = builder.build();
-
+        var soeknad = ytelseSøknadMapper.mapSøknad(manuellRegistreringForeldrepengerDto, navBruker);
+        var oversetter = new MottattDokumentOversetterSøknad(repositoryProvider, virksomhetTjeneste, iayTjeneste,
+                tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository, oppgittPeriodeMottattDato);
+        var fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
+        var behandling = Behandling.forFørstegangssøknad(fagsak).build();
         repositoryProvider.getFagsakRepository().opprettNy(fagsak);
         behandlingRepository.lagre(behandling, behandlingRepository.taSkriveLås(behandling));
+        when(tpsTjeneste.hentBrukerForAktør(any(AktørId.class))).thenReturn(kvinne);
+        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad),
+                new MottattDokument.Builder().medMottattDato(LocalDate.now())
+                        .medFagsakId(behandling.getFagsakId()).medElektroniskRegistrert(true).build(),
+                behandling, Optional.empty());
 
-        final MottattDokument.Builder builder1 = new MottattDokument.Builder().medMottattDato(LocalDate.now())
-            .medFagsakId(behandling.getFagsakId()).medElektroniskRegistrert(true);
-        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad), builder1.build(), behandling, Optional.empty());
+        var ytelseFordeling = repositoryProvider.getYtelsesFordelingRepository().hentAggregat(behandling.getId());
 
-        final YtelseFordelingAggregat ytelseFordelingAggregat = repositoryProvider.getYtelsesFordelingRepository().hentAggregat(behandling.getId());
+        assertThat(ytelseFordeling.getOppgittRettighet()).isNotNull();
+        assertThat(ytelseFordeling.getOppgittRettighet().getHarAnnenForeldreRett()).isFalse();
+        assertThat(ytelseFordeling.getOppgittRettighet().getHarAleneomsorgForBarnet()).isTrue();
+        assertThat(ytelseFordeling.getOppgittRettighet().getHarOmsorgForBarnetIHelePerioden()).isTrue();
 
-        assertThat(ytelseFordelingAggregat.getOppgittRettighet()).isNotNull();
-        assertThat(ytelseFordelingAggregat.getOppgittRettighet().getHarAnnenForeldreRett()).isFalse();
-        assertThat(ytelseFordelingAggregat.getOppgittRettighet().getHarAleneomsorgForBarnet()).isTrue();
-        assertThat(ytelseFordelingAggregat.getOppgittRettighet().getHarOmsorgForBarnetIHelePerioden()).isTrue();
-
-        assertThat(ytelseFordelingAggregat.getOppgittFordeling()).isNotNull();
-        assertThat(ytelseFordelingAggregat.getOppgittFordeling().getOppgittePerioder()).isNotEmpty();
-        assertThat(ytelseFordelingAggregat.getOppgittFordeling().getOppgittePerioder()).hasSize(3); //Foreldrepenger før fødsel, mødrekvote og utsettelse
-        assertThat(ytelseFordelingAggregat.getOppgittFordeling().getOppgittePerioder()).anySatisfy(periode -> assertThat(periode.getPeriodeType()).isEqualTo(UttakPeriodeType.FORELDREPENGER_FØR_FØDSEL));
-        assertThat(ytelseFordelingAggregat.getOppgittFordeling().getOppgittePerioder()).anySatisfy(periode -> assertThat(periode.getPeriodeType()).isEqualTo(UttakPeriodeType.MØDREKVOTE));
-        assertThat(ytelseFordelingAggregat.getOppgittFordeling().getOppgittePerioder()).anySatisfy(periode -> assertThat(periode.getErArbeidstaker()).isEqualTo(Boolean.TRUE));
+        assertThat(ytelseFordeling.getOppgittFordeling()).isNotNull();
+        assertThat(ytelseFordeling.getOppgittFordeling().getOppgittePerioder()).isNotEmpty();
+        assertThat(ytelseFordeling.getOppgittFordeling().getOppgittePerioder()).hasSize(3); // Foreldrepenger før fødsel, mødrekvote og
+                                                                                            // utsettelse
+        assertThat(ytelseFordeling.getOppgittFordeling().getOppgittePerioder())
+                .anySatisfy(periode -> assertThat(periode.getPeriodeType()).isEqualTo(FORELDREPENGER_FØR_FØDSEL));
+        assertThat(ytelseFordeling.getOppgittFordeling().getOppgittePerioder())
+                .anySatisfy(periode -> assertThat(periode.getPeriodeType()).isEqualTo(MØDREKVOTE));
+        assertThat(ytelseFordeling.getOppgittFordeling().getOppgittePerioder())
+                .anySatisfy(periode -> assertThat(periode.getErArbeidstaker()).isEqualTo(Boolean.TRUE));
     }
 
     @Test
     public void test_mapFordeling_morAleneomsorg() {
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        PermisjonPeriodeDto permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now(), LocalDate.now().plusWeeks(3), UttakPeriodeType.MØDREKVOTE, null);
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
+        var manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
+        var permisjonPeriodeDto = opprettPermisjonPeriodeDto(LocalDate.now(), LocalDate.now().plusWeeks(3),
+                MØDREKVOTE, null);
+        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, true, LocalDate.now(), 1);
         manuellRegistreringForeldrepengerDto.setTidsromPermisjon(opprettTidsromPermisjonDto(Collections.singletonList(permisjonPeriodeDto)));
 
-        Fordeling fordeling = YtelseSøknadMapper.mapFordeling(manuellRegistreringForeldrepengerDto);
+        var fordeling = YtelseSøknadMapper.mapFordeling(manuellRegistreringForeldrepengerDto);
         assertThat(fordeling).isNotNull();
     }
 
     @Test
     public void test_mapForeldrepengerMedEgenNæring() {
-        ManuellRegistreringForeldrepengerDto registreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(registreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now().minusWeeks(3), 1);
+        when(virksomhetTjeneste.hentOrganisasjon(any()))
+                .thenReturn(Virksomhet.getBuilder().medOrgnr(KUNSTIG_ORG).medNavn("Ukjent Firma").medRegistrert(LocalDate.now().minusYears(1))
+                        .medRegistrert(LocalDate.now().minusYears(1)).build());
+
+        var registreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(registreringForeldrepengerDto, true, LocalDate.now().minusWeeks(3), 1);
         registreringForeldrepengerDto.setEgenVirksomhet(opprettEgenVirksomhetDto());
-        when(tpsTjeneste.hentAktørForFnr(any())).thenReturn(Optional.ofNullable(STD_KVINNE_AKTØR_ID));
         ytelseSøknadMapper.mapSøknad(registreringForeldrepengerDto, opprettBruker());
     }
 
     @Test
     public void test_mapRettigheter_farRettPåFedrekvote() {
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
-        manuellRegistreringForeldrepengerDto.setTidsromPermisjon(opprettTidsromPermisjonDto(null));
-        manuellRegistreringForeldrepengerDto.setAnnenForelder(opprettAnnenForelderDto(true, true, true));
-        Rettigheter rettigheter = YtelseSøknadMapper.mapRettigheter(manuellRegistreringForeldrepengerDto);
+        var dto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(dto, true, LocalDate.now(), 1);
+        dto.setTidsromPermisjon(opprettTidsromPermisjonDto(null));
+        dto.setAnnenForelder(opprettAnnenForelderDto(true, true, true));
+        var rettigheter = YtelseSøknadMapper.mapRettigheter(dto);
         assertThat(rettigheter).isNotNull();
         assertThat(rettigheter.isHarAnnenForelderRett()).isTrue();
         assertThat(rettigheter.isHarAleneomsorgForBarnet()).isTrue();
@@ -569,8 +542,8 @@ public class SøknadMapperTest {
 
     @Test
     public void test_mapRettigheter_morAleneomsorg() {
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
+        var manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, true, LocalDate.now(), 1);
         manuellRegistreringForeldrepengerDto.setTidsromPermisjon(opprettTidsromPermisjonDto(null));
         manuellRegistreringForeldrepengerDto.setAnnenForelder(opprettAnnenForelderDto(true, true, false));
         Rettigheter rettigheter = YtelseSøknadMapper.mapRettigheter(manuellRegistreringForeldrepengerDto);
@@ -581,63 +554,72 @@ public class SøknadMapperTest {
 
     @Test
     public void skal_ikke_mappe_og_lagre_oppgitt_opptjening_når_det_allerede_finnes_i_grunnlaget() {
-        // Arrange
-        InntektArbeidYtelseGrunnlag iayGrunnlag = mock(InntektArbeidYtelseGrunnlag.class);
+        var iayGrunnlag = mock(InntektArbeidYtelseGrunnlag.class);
+        when(tpsTjeneste.hentBrukerForAktør(any(AktørId.class))).thenReturn(kvinne);
         when(iayGrunnlag.getOppgittOpptjening()).thenReturn(Optional.of(mock(OppgittOpptjening.class)));
         when(iayTjeneste.finnGrunnlag(any(Long.class))).thenReturn(Optional.of(iayGrunnlag));
+        when(virksomhetTjeneste.hentOrganisasjon(any()))
+                .thenReturn(Virksomhet.getBuilder().medOrgnr(KUNSTIG_ORG).medNavn("Ukjent Firma").medRegistrert(LocalDate.now().minusYears(1))
+                        .medRegistrert(LocalDate.now().minusYears(1)).build());
 
-        NavBruker navBruker = opprettBruker();
-        Fagsak fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
-        Behandling behandling = Behandling.forFørstegangssøknad(fagsak).build();
+        var navBruker = opprettBruker();
+        var fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
+        var behandling = Behandling.forFørstegangssøknad(fagsak).build();
         repositoryProvider.getFagsakRepository().opprettNy(fagsak);
         behandlingRepository.lagre(behandling, behandlingRepository.taSkriveLås(behandling));
 
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
-        List<PermisjonPeriodeDto> permisjonPerioder = List.of(opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), UttakPeriodeType.MØDREKVOTE, null));
-        manuellRegistreringForeldrepengerDto.setTidsromPermisjon(opprettTidsromPermisjonDto(permisjonPerioder));
-        manuellRegistreringForeldrepengerDto.setDekningsgrad(DekningsgradDto.HUNDRE);
-        manuellRegistreringForeldrepengerDto.setEgenVirksomhet(opprettEgenVirksomhetDto());
-        Soeknad soeknad = ytelseSøknadMapper.mapSøknad(manuellRegistreringForeldrepengerDto, navBruker);
+        var dto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(dto, true, LocalDate.now(), 1);
+        var permisjonPerioder = List
+                .of(opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), MØDREKVOTE, null));
+        dto.setTidsromPermisjon(opprettTidsromPermisjonDto(permisjonPerioder));
+        dto.setDekningsgrad(DekningsgradDto.HUNDRE);
+        dto.setEgenVirksomhet(opprettEgenVirksomhetDto());
+        var soeknad = ytelseSøknadMapper.mapSøknad(dto, navBruker);
 
-        MottattDokument.Builder mottattDokument = new MottattDokument.Builder().medMottattDato(LocalDate.now()).medFagsakId(behandling.getFagsakId()).medElektroniskRegistrert(true);
-        MottattDokumentOversetterSøknad oversetter = new MottattDokumentOversetterSøknad(repositoryProvider, virksomhetTjeneste, iayTjeneste, tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository, oppgittPeriodeMottattDatoTjeneste);
+        var mottattDokument = new MottattDokument.Builder().medMottattDato(LocalDate.now()).medFagsakId(behandling.getFagsakId())
+                .medElektroniskRegistrert(true);
+        var oversetter = new MottattDokumentOversetterSøknad(repositoryProvider, virksomhetTjeneste, iayTjeneste,
+                tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository, oppgittPeriodeMottattDato);
 
-        // Act
-        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad), mottattDokument.build(), behandling, Optional.empty());
+        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad), mottattDokument.build(),
+                behandling, Optional.empty());
 
-        // Assert
         verify(iayTjeneste, times(0)).lagreOppgittOpptjening(anyLong(), any(OppgittOpptjeningBuilder.class));
     }
 
     @Test
     public void skal_mappe_og_lagre_oppgitt_opptjening_når_det_ikke_finnes_i_grunnlaget() {
-        // Arrange
-        InntektArbeidYtelseGrunnlag iayGrunnlag = mock(InntektArbeidYtelseGrunnlag.class);
+        var iayGrunnlag = mock(InntektArbeidYtelseGrunnlag.class);
+        when(tpsTjeneste.hentBrukerForAktør(any(AktørId.class))).thenReturn(kvinne);
         when(iayGrunnlag.getOppgittOpptjening()).thenReturn(Optional.empty());
         when(iayTjeneste.finnGrunnlag(any(Long.class))).thenReturn(Optional.of(iayGrunnlag));
+        when(virksomhetTjeneste.hentOrganisasjon(any()))
+                .thenReturn(Virksomhet.getBuilder().medOrgnr(KUNSTIG_ORG).medNavn("Ukjent Firma").medRegistrert(LocalDate.now().minusYears(1))
+                        .medRegistrert(LocalDate.now().minusYears(1)).build());
 
-        NavBruker navBruker = opprettBruker();
-        Fagsak fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
-        Behandling behandling = Behandling.forFørstegangssøknad(fagsak).build();
+        var navBruker = opprettBruker();
+        var fagsak = Fagsak.opprettNy(FagsakYtelseType.FORELDREPENGER, navBruker);
+        var behandling = Behandling.forFørstegangssøknad(fagsak).build();
         repositoryProvider.getFagsakRepository().opprettNy(fagsak);
         behandlingRepository.lagre(behandling, behandlingRepository.taSkriveLås(behandling));
 
-        ManuellRegistreringForeldrepengerDto manuellRegistreringForeldrepengerDto = new ManuellRegistreringForeldrepengerDto();
-        oppdaterDtoForFødsel(manuellRegistreringForeldrepengerDto, FamilieHendelseType.FØDSEL, true, LocalDate.now(), 1);
-        List<PermisjonPeriodeDto> permisjonPerioder = List.of(opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), UttakPeriodeType.MØDREKVOTE, null));
-        manuellRegistreringForeldrepengerDto.setTidsromPermisjon(opprettTidsromPermisjonDto(permisjonPerioder));
-        manuellRegistreringForeldrepengerDto.setDekningsgrad(DekningsgradDto.HUNDRE);
-        manuellRegistreringForeldrepengerDto.setEgenVirksomhet(opprettEgenVirksomhetDto());
-        Soeknad soeknad = ytelseSøknadMapper.mapSøknad(manuellRegistreringForeldrepengerDto, navBruker);
+        var dto = new ManuellRegistreringForeldrepengerDto();
+        oppdaterDtoForFødsel(dto, true, LocalDate.now(), 1);
+        var permisjonPerioder = List
+                .of(opprettPermisjonPeriodeDto(LocalDate.now().minusWeeks(3), LocalDate.now(), MØDREKVOTE, null));
+        dto.setTidsromPermisjon(opprettTidsromPermisjonDto(permisjonPerioder));
+        dto.setDekningsgrad(DekningsgradDto.HUNDRE);
+        dto.setEgenVirksomhet(opprettEgenVirksomhetDto());
+        var soeknad = ytelseSøknadMapper.mapSøknad(dto, navBruker);
 
-        MottattDokument.Builder mottattDokument = new MottattDokument.Builder().medMottattDato(LocalDate.now()).medFagsakId(behandling.getFagsakId()).medElektroniskRegistrert(true);
-        MottattDokumentOversetterSøknad oversetter = new MottattDokumentOversetterSøknad(repositoryProvider, virksomhetTjeneste, iayTjeneste, tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository, oppgittPeriodeMottattDatoTjeneste);
+        var mottattDokument = new MottattDokument.Builder().medMottattDato(LocalDate.now()).medFagsakId(behandling.getFagsakId())
+                .medElektroniskRegistrert(true);
+        var oversetter = new MottattDokumentOversetterSøknad(repositoryProvider, virksomhetTjeneste, iayTjeneste,
+                tpsTjeneste, datavarehusTjeneste, svangerskapspengerRepository, oppgittPeriodeMottattDato);
 
-        // Act
-        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad), mottattDokument.build(), behandling, Optional.empty());
-
-        // Assert
-        verify(iayTjeneste, times(1)).lagreOppgittOpptjening(anyLong(), any(OppgittOpptjeningBuilder.class));
+        oversetter.trekkUtDataOgPersister((MottattDokumentWrapperSøknad) MottattDokumentWrapperSøknad.tilXmlWrapper(soeknad), mottattDokument.build(),
+                behandling, Optional.empty());
+        verify(iayTjeneste).lagreOppgittOpptjening(anyLong(), any(OppgittOpptjeningBuilder.class));
     }
 }
